--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,6 @@ deploybuild:
     - cnpm install
     - npm run build
     - ls 
-    - ssh root@$deploy_server rm -rf /home/chen/sl/srs/html/$CI_PROJECT_NAME && scp -r "$CI_PROJECT_NAME" root@$deploy_server:/home/chen/sl/srs/html/$CI_PROJECT_NAME
+    - ssh frontend@$deploy_server rm -rf /export/apps/nginx/html/$CI_PROJECT_NAME && scp -r "$CI_PROJECT_NAME" frontend@$deploy_server:/export/apps/nginx/html/
   tags:
     - vue
